src/modules/echo-cancel/adrian-aec.c
@@ -14,6 +14,10 @@
 #define _GNU_SOURCE
 #endif
 
+#ifdef HAVE_CONFIG_H
+#include <config.h>
+#endif
+
 #include <math.h>
 #include <string.h>
 #include <stdint.h>
